fix image display on iPhone 6 plus

--- a/src/scss/modules/_product-detail.scss
+++ b/src/scss/modules/_product-detail.scss
@@ -117,7 +117,7 @@ section.row {
 
     flex-grow: 4;
     flex-shrink: 0;
-    flex-basis: 200px;
+    flex-basis: 250px;
   }
 
   .side-image-content {
